feat: small adjustments to tsconfig (#44)

--- a/tooling/typescript-config/tsc/no-dom/app.json
+++ b/tooling/typescript-config/tsc/no-dom/app.json
@@ -12,8 +12,9 @@
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
-    "module": "NodeNext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "sourceMap": true,
-    "lib": ["es2022"]
+    "lib": ["es2023"]
   }
 }
