--- a/tooling/typescript-config/tsc/dom/app.json
+++ b/tooling/typescript-config/tsc/dom/app.json
@@ -12,8 +12,9 @@
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
-    "module": "preserve",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "sourceMap": true,
-    "lib": ["es2022", "dom", "dom.iterable"]
+    "lib": ["es2023", "dom", "dom.iterable"]
   }
 }
