--- a/packages/predicates/tsconfig.json
+++ b/packages/predicates/tsconfig.json
@@ -4,6 +4,7 @@
   "include": ["./src"],
   "exclude": [
     "node_modules",
+    "**/__fixtures__",
     "**/*.bench.ts",
     "**/*.test.ts",
     "**/*.test-d.ts"
