--- a/tooling/biome-config/package.json
+++ b/tooling/biome-config/package.json
@@ -7,7 +7,8 @@
   "exports": {
     "./analyzer": "./analyzer.json",
     "./formatter": "./formatter.json",
-    "./linter": "./linter.json"
+    "./linter": "./linter.json",
+    "./package.json": "./package.json"
   },
   "scripts": {
     "lint": "pnpm biome lint ./"
