--- a/packages/converters/package.json
+++ b/packages/converters/package.json
@@ -4,9 +4,7 @@
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -21,7 +19,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "pnpm tsc",
+    "build": "pnpm bunchee --sourcemap=true",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/converters",
     "lint": "pnpm biome lint ./",
@@ -31,6 +29,7 @@
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "@vitest/coverage-istanbul": "^2.1.3",
+    "bunchee": "^5.5.1",
     "vitest": "^2.1.3"
   },
   "dependencies": {
