--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -30,6 +30,7 @@
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "@vitest/coverage-istanbul": "^2.1.3",
+    "esbuild-plugin-file-path-extensions": "^2.1.3",
     "tsup": "^8.3.0",
     "vitest": "^2.1.3"
   },
