--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -31,6 +31,7 @@
     "@accelint/vitest-config": "workspace:*",
     "@vitest/coverage-istanbul": "^2.1.3",
     "@vitest/web-worker": "^2.1.3",
+    "esbuild-plugin-file-path-extensions": "^2.1.3",
     "tsup": "^8.3.0",
     "vitest": "^2.1.3"
   },
