--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -4,9 +4,7 @@
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -18,9 +16,9 @@
     },
     "./styles": {
       "import": {
-        "default": "./dist/styles.css"
+        "default": "./dist/index.css"
       },
-      "default": "./dist/styles.css"
+      "default": "./dist/index.css"
     },
     "./vanilla": {
       "import": {
@@ -32,7 +30,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "pnpm rollup --config rollup.config.js",
+    "build": "pnpm tsup && rm -rf dist/vanilla.css dist/vanilla.css.map",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/design-system --barrels",
     "lint:todo": "pnpm biome lint ./",
@@ -46,23 +44,20 @@
     "@fontsource/roboto-flex": "^5.1.0",
     "@fontsource/roboto-mono": "^5.1.0",
     "@ladle/react": "^4.1.2",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-typescript": "^12.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.11",
-    "@vanilla-extract/rollup-plugin": "^1.3.10",
+    "@vanilla-extract/esbuild-plugin": "^2.3.11",
     "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitest/coverage-istanbul": "^2.1.3",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^25.0.1",
     "react-test-renderer": "^18.3.1",
-    "rollup": "^4.24.0",
-    "rollup-plugin-esbuild": "^6.1.1",
-    "rollup-plugin-node-externals": "^7.1.3",
-    "rollup-plugin-typescript-paths": "^1.5.0",
+    "postcss": "^8.4.47",
+    "tsup": "^8.3.0",
     "vite": "^5.4.9",
     "vitest": "^2.1.3"
   },
