--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,12 +1,16 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/design-system",
   "version": "0.3.2",
-  "private": false,
+  "author": "https://hypergiant.com",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": false,
+  "sideEffects": false,
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -56,6 +60,7 @@
     "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitest/coverage-istanbul": "^2.1.3",
     "autoprefixer": "^10.4.20",
+    "esbuild-plugin-lodash": "^1.2.0",
     "jsdom": "^25.0.1",
     "react-test-renderer": "^18.3.1",
     "postcss": "^8.4.47",
@@ -63,7 +68,7 @@
     "vite": "^5.4.9",
     "vitest": "^2.1.3"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@accelint/converters": "workspace:*",
     "@accelint/core": "workspace:*",
     "@react-aria/collections": "3.0.0-alpha.5",
@@ -84,11 +89,5 @@
     "type-fest": "^4.26.1",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
-  },
-  "$schema": "https://json.schemastore.org/package",
-  "author": "https://hypergiant.com",
-  "publishConfig": {
-    "access": "public"
-  },
-  "sideEffects": false
+  }
 }
