--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "pnpm tsup && rm -rf dist/vanilla.css dist/vanilla.css.map",
+    "build": "NODE_OPTIONS=--max_old_space_size=8192 pnpm tsup && rm -rf dist/vanilla.css dist/vanilla.css.map",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/design-system --barrels",
     "lint:todo": "pnpm biome lint ./",
@@ -60,6 +60,7 @@
     "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitest/coverage-istanbul": "^2.1.3",
     "autoprefixer": "^10.4.20",
+    "esbuild-plugin-file-path-extensions": "^2.1.3",
     "esbuild-plugin-lodash": "^1.2.0",
     "jsdom": "^25.0.1",
     "react-test-renderer": "^18.3.1",
