--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -68,26 +68,31 @@
     "vite": "^5.4.9",
     "vitest": "^2.1.3"
   },
-  "peerDependencies": {
-    "@accelint/converters": "workspace:*",
-    "@accelint/core": "workspace:*",
-    "@react-aria/collections": "3.0.0-alpha.5",
-    "@react-aria/ssr": "^3.9.6",
-    "@react-aria/utils": "^3.25.3",
-    "@react-stately/utils": "^3.10.4",
-    "@react-types/shared": "^3.25.0",
+  "dependencies": {
     "@vanilla-extract/css": "^1.16.0",
     "@vanilla-extract/dynamic": "^2.1.2",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-aria": "^3.35.1",
-    "react-aria-components": "^1.4.1",
-    "react-dom": "^18.3.1",
-    "react-querybuilder": "^7.7.0",
-    "react-stately": "^3.33.0",
     "type-fest": "^4.26.1",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
+  },
+  "peerDependencies": {
+    "@accelint/converters": "workspace:*",
+    "@accelint/core": "workspace:*",
+    "@react-aria/collections": "^3.0.0-alpha.5",
+    "@react-aria/dnd": "^3.7.4",
+    "@react-aria/focus": "^3.18.4",
+    "@react-aria/interactions": "^3.22.4",
+    "@react-aria/overlays": "^3.23.4",
+    "@react-aria/ssr": "^3.9.6",
+    "@react-aria/utils": "^3.25.3",
+    "@react-stately/utils": "^3.10.4",
+    "@react-types/shared": "^3.25.0",
+    "react": "^18.3.1",
+    "react-aria-components": "^1.4.1",
+    "react-dom": "^18.3.1",
+    "react-querybuilder": "^7.7.0",
+    "react-stately": "^3.33.0"
   }
 }
