--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -87,12 +87,13 @@
     "@react-aria/overlays": "^3.23.4",
     "@react-aria/ssr": "^3.9.6",
     "@react-aria/utils": "^3.25.3",
+    "@react-stately/overlays": "^3.6.11",
+    "@react-stately/data": "^3.11.7",
     "@react-stately/utils": "^3.10.4",
     "@react-types/shared": "^3.25.0",
     "react": "^18.3.1 || ^19.0.0-rc-69d4b800-20241021",
     "react-aria-components": "^1.4.1",
     "react-dom": "^18.3.1 || ^19.0.0-rc-69d4b800-20241021",
-    "react-querybuilder": "^7.7.0",
-    "react-stately": "^3.33.0"
+    "react-querybuilder": "^7.7.0"
   }
 }
