--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -9,9 +9,9 @@
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
-    "@accelint/biome-config": "workspace:*",
-    "@accelint/typescript-config": "workspace:*",
-    "@accelint/vitest-config": "workspace:*",
+    "@accelint/biome-config": "workspace:0.1.2",
+    "@accelint/typescript-config": "workspace:0.1.2",
+    "@accelint/vitest-config": "workspace:0.1.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
