--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "turbo test"
   },
   "dependencies": {
-    "@accelint/biome-config": "workspace:*",
+    "@accelint/biome-config": "workspace:0.1.2",
     "@babel/parser": "^7.25.8",
     "@biomejs/biome": "^1.9.3",
     "@changesets/changelog-git": "^0.2.0",
