--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,8 +26,8 @@
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
-    "@accelint/typescript-config": "workspace:*",
-    "@accelint/vitest-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:0.1.2",
+    "@accelint/vitest-config": "workspace:0.1.3",
     "@vitest/coverage-istanbul": "^2.1.3",
     "esbuild-plugin-file-path-extensions": "^2.1.3",
     "tsup": "^8.3.0",
