--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -46,9 +46,9 @@
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
-    "@accelint/biome-config": "workspace:*",
-    "@accelint/typescript-config": "workspace:*",
-    "@accelint/vitest-config": "workspace:*",
+    "@accelint/biome-config": "workspace:0.1.2",
+    "@accelint/typescript-config": "workspace:0.1.2",
+    "@accelint/vitest-config": "workspace:0.1.3",
     "@fontsource/roboto-flex": "^5.1.0",
     "@fontsource/roboto-mono": "^5.1.0",
     "@ladle/react": "^4.1.2",
@@ -73,8 +73,8 @@
     "vitest": "^2.1.3"
   },
   "dependencies": {
-    "@accelint/converters": "workspace:*",
-    "@accelint/core": "workspace:*",
+    "@accelint/converters": "workspace:0.1.3",
+    "@accelint/core": "workspace:0.1.3",
     "@vanilla-extract/css": "^1.16.0",
     "@vanilla-extract/dynamic": "^2.1.2",
     "clsx": "^2.1.1",
