--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -27,16 +27,16 @@
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
-    "@accelint/typescript-config": "workspace:*",
-    "@accelint/vitest-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:0.1.2",
+    "@accelint/vitest-config": "workspace:0.1.3",
     "@vitest/coverage-istanbul": "^2.1.3",
     "esbuild-plugin-file-path-extensions": "^2.1.3",
     "tsup": "^8.3.0",
     "vitest": "^2.1.3"
   },
   "dependencies": {
-    "@accelint/math": "workspace:*",
-    "@accelint/predicates": "workspace:*",
+    "@accelint/math": "workspace:0.1.3",
+    "@accelint/predicates": "workspace:0.1.3",
     "typescript": "^5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
