--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -27,8 +27,8 @@
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
-    "@accelint/typescript-config": "workspace:*",
-    "@accelint/vitest-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:0.1.2",
+    "@accelint/vitest-config": "workspace:0.1.3",
     "@vitest/coverage-istanbul": "^2.1.3",
     "@vitest/web-worker": "^2.1.3",
     "esbuild-plugin-file-path-extensions": "^2.1.3",
@@ -36,7 +36,7 @@
     "vitest": "^2.1.3"
   },
   "dependencies": {
-    "@accelint/core": "workspace:*",
+    "@accelint/core": "workspace:0.1.3",
     "typescript": "^5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
