--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "@accelint/math": "workspace:0.1.3",
     "@accelint/predicates": "workspace:0.1.3",
+    "@ngageoint/mgrs-js": "^1.0.0",
+    "@ngageoint/grid-js": "^2.1.0",
     "typescript": "^5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
