--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,7 +7,10 @@
 * @brandonjpierce @ArrayKnight @belsrc
 
 # Core pacakge
-/packages/core @brandonjpierce @belsrc
+/packages/core @belsrc @brandonjpierce
 
 # Design system pacakge
 /packages/design-system @ArrayKnight @switzerb
+
+# Geo package
+/packages/geo @kalisjoshua @brandonjpierce
