--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@changesets/cli": "2.27.9",
     "@ls-lint/ls-lint": "2.3.0-beta.1",
     "@swc/core": "1.7.36",
+    "lefthook": "1.9.3",
     "rimraf": "5.0.10",
     "syncpack": "13.0.0",
     "taze": "0.17.2",
