--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -44,14 +42,18 @@
     "test": "pnpm vitest --dir=src"
   },
   "peerDependencies": {
+    "@internationalized/date": "3.7.0",
     "@react-aria/collections": "3.0.0-alpha.5",
+    "@react-aria/datepicker": "3.14.1",
     "@react-aria/dnd": "3.7.4",
     "@react-aria/focus": "3.18.4",
+    "@react-aria/i18n": "3.12.4",
     "@react-aria/interactions": "3.22.4",
     "@react-aria/overlays": "3.23.4",
     "@react-aria/ssr": "3.9.6",
     "@react-aria/utils": "3.25.3",
     "@react-stately/data": "3.11.7",
+    "@react-stately/datepicker": "3.13.0",
     "@react-stately/overlays": "3.6.11",
     "@react-stately/utils": "3.10.4",
     "@react-types/shared": "3.25.0",
