--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "deps:version-patch": "pnpm taze patch -r",
     "dev": "turbo dev",
     "docs": "turbo docs",
-    "format": "pnpm biome format . --write",
+    "format:imports": "pnpm biome check . --formatter-enabled=false --linter-enabled=false  --organize-imports-enabled=true  --write ",
+    "format": "pnpm run format:imports && pnpm biome format . --write",
     "indexer": "turbo index",
     "license": "pnpm zx scripts/license.mjs",
     "lint": "turbo lint",
