--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,6 +1,9 @@
 pre-commit:
   parallel: true
   commands:
+    lint-imports:
+      run: pnpm run lint:imports {staged_files}
+      stage_fixed: true
     generate-license:
       run: pnpm run license "--files={staged_files}"
       stage_fixed: true
