--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "license": "pnpm zx scripts/license.mjs",
     "lint": "turbo lint",
     "lint:fs": "pnpm ls-lint",
-    "lint:imports": "pnpm biome check . --formatter-enabled=false --linter-enabled=false  --organize-imports-enabled=true  --write",
+    "lint:imports": "pnpm biome check --formatter-enabled=false --linter-enabled=false  --organize-imports-enabled=true  --write",
     "test": "turbo test"
   },
   "dependencies": {
