--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,12 +1,14 @@
 pre-commit:
-  parallel: true
   commands:
-    format:
-      run: pnpm run format {staged_files}
-      stage_fixed: true
-    lint-imports:
-      run: pnpm run sort-imports {staged_files}
-      stage_fixed: true
     generate-license:
       run: pnpm run license "--files={staged_files}"
+      stage_fixed: true
+
+pre-push:
+  commands:
+    format:
+      run: pnpm run format
+      stage_fixed: true
+    sort-imports:
+      run: pnpm run sort-imports
       stage_fixed: true
