--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,5 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "cSpell.words": ["accelint"]
+  "cSpell.words": ["accelint", "latlon", "LONLAT", "mgrs"]
 }
