--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
     },
     "build": {
       "dependsOn": ["index", "^build"],
-      "outputs": ["dist"]
+      "outputs": ["dist", "build"]
     }
   }
 }
