test: core array fns (#238)
* chore: clean up constants

* chore: clean up converters

* docs: playground doc blocks for converters

* test: add missing unit tests to array fns

* build: address doc site issues

* docs: add logs for playgrounds

* revert: remove playground tags

* chore: changeset

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@accelint/biome-config": "workspace:*",
     "@accelint/constants": "workspace:*",
+    "@accelint/converters": "workspace:*",
     "@accelint/core": "workspace:*",
     "@accelint/design-system": "workspace:*",
     "@accelint/formatters": "workspace:*",
