--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -88,9 +88,9 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.9.0",
     "@types/react": "19.1.13",
-    "@types/react-dom": "^19.1.9",
+    "@types/react-dom": "19.1.11",
     "client-only": "^0.0.1",
     "esbuild-fix-imports-plugin": "^1.0.23",
     "maplibre-gl": "^5.7.1",
