--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -101,6 +101,7 @@
     "mjolnir.js": "^3.0.0",
     "node-fetch": "^2.6.7",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "storybook": "^8.6.14",
     "tailwindcss": "^4.1.11",
     "tsup": "8.5.0",
