--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -55,9 +55,6 @@
     "test": "pnpm vitest --dir=src",
     "test:watch": "pnpm vitest --dir=src --watch"
   },
-  "dependencies": {
-    "@types/react-dom": "19.1.11"
-  },
   "devDependencies": {
     "@accelint/biome-config": "workspace:*",
     "@accelint/bus": "workspace:*",
@@ -78,17 +75,21 @@
     "@storybook/addon-actions": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-storysource": "^8.6.14",
+    "@storybook/addon-themes": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/builder-vite": "^8.6.14",
     "@storybook/manager-api": "^8.6.14",
     "@storybook/react": "^8.6.14",
     "@storybook/react-vite": "^8.6.14",
+    "@storybook/theming": "^8.6.14",
     "@tailwindcss/vite": "^4.1.11",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.9.0",
     "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.11",
     "client-only": "^0.0.1",
     "esbuild-fix-imports-plugin": "^1.0.23",
     "maplibre-gl": "^5.7.1",
