--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -69,8 +69,7 @@
     "vitest-broadcast-channel-mock": "^0.1.0"
   },
   "peerDependencies": {
-    "@accelint/bus": "1.4.0",
-    "typescript": "5.8.3"
+    "@accelint/core": "0.4.2"
   },
   "optionalDependencies": {
     "react": "19.0.0"
