--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -89,6 +89,13 @@
     "test": "pnpm vitest --dir=src",
     "test:watch": "pnpm vitest --dir=src --watch"
   },
+  "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@react-stately/data": "^3.13.2",
+    "@tanstack/react-table": "^8.21.3"
+  },
   "devDependencies": {
     "@accelint/biome-config": "workspace:*",
     "@accelint/bus": "workspace:*",
@@ -175,7 +182,6 @@
     "@react-aria/ssr": "^3.9.10",
     "@react-aria/utils": "^3.30.0",
     "@react-stately/color": "^3.9.0",
-    "@react-stately/data": "^3.13.2",
     "@react-stately/datepicker": "^3.15.2",
     "@react-stately/utils": "^3.10.8",
     "@react-types/overlays": "^3.9.0",
